Fix home videos overflow at x-axis

--- a/app/assets/stylesheets/category.scss
+++ b/app/assets/stylesheets/category.scss
@@ -1,3 +1,7 @@
+.categories-videos-container{
+    overflow: hidden;
+}
+
 .category-container{
     margin-left: 2.4vw;
 }
